--- a/app/SigFox/app/src/main/res/layout/activity_logs.xml
+++ b/app/SigFox/app/src/main/res/layout/activity_logs.xml
@@ -31,7 +31,9 @@
         android:layout_toLeftOf="@+id/login"
         android:layout_alignBottom="@+id/login"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:maxLines = "20"
+        android:scrollbars = "vertical"/>
 
     <Button
         style="?android:attr/buttonStyleSmall"
