criacao do alarme

--- a/app/SigFox/app/src/main/res/layout/activity_logs.xml
+++ b/app/SigFox/app/src/main/res/layout/activity_logs.xml
@@ -65,7 +65,8 @@
         android:id="@+id/addAlarm"
         android:layout_above="@+id/add_device"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="addAlarm"/>
 
 
 </RelativeLayout>
