--- a/app/SigFox/app/src/main/res/layout/activity_logs.xml
+++ b/app/SigFox/app/src/main/res/layout/activity_logs.xml
@@ -92,5 +92,14 @@
         android:layout_alignRight="@+id/sensor_button"
         android:layout_alignEnd="@+id/sensor_button" />
 
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:entries="@array/devicesArray"
+        android:layout_below="@+id/login_info"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 
 </RelativeLayout>
