--- a/app/SigFox/app/src/main/res/layout/activity_logs.xml
+++ b/app/SigFox/app/src/main/res/layout/activity_logs.xml
@@ -97,8 +97,22 @@
         android:layout_height="wrap_content"
         android:id="@+id/spinner"
         android:layout_below="@+id/login_info"
+        android:layout_toRightOf="@+id/add_device"
+        android:layout_toEndOf="@+id/add_device" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Current device:"
+        android:gravity="center"
+        android:id="@+id/textView4"
+        android:layout_below="@+id/login_info"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignBottom="@+id/spinner"
+        android:layout_alignRight="@+id/add_device"
+        android:layout_alignEnd="@+id/add_device" />
 
 
 </RelativeLayout>
