--- a/app/SigFox/app/src/main/res/layout/activity_main.xml
+++ b/app/SigFox/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,17 @@
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="102dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/debug"
+        android:layout_below="@+id/button"
+        android:layout_marginTop="48dp"
+        android:layout_alignLeft="@+id/textView"
+        android:layout_alignStart="@+id/textView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/textView"
+        android:layout_alignEnd="@+id/textView" />
 </RelativeLayout>
