--- a/app/SigFox/app/src/main/res/layout/activity_main.xml
+++ b/app/SigFox/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
         android:layout_below="@+id/button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/button2" />
+        android:layout_above="@+id/continuee" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -59,13 +59,14 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/button2" />
+        android:layout_below="@+id/continuee" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button2"
+        android:text="Continue"
+        android:onClick="nextActivity"
+        android:id="@+id/continuee"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
