app a funcionar com hint em vez de texto

--- a/app/SigFox/app/src/main/res/layout/activity_new_alarm.xml
+++ b/app/SigFox/app/src/main/res/layout/activity_new_alarm.xml
@@ -33,7 +33,7 @@ tools:context="com.example.eu.sigfox.NewAlarmActivity">
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
-        android:text="Input alarm threshold"
+        android:hint="Input alarm threshold"
         android:id="@+id/temperatureThreshold"
         android:layout_below="@+id/textView2"
         android:layout_marginTop="92dp"
