--- a/app/SigFox/app/src/main/res/layout/activity_add_device.xml
+++ b/app/SigFox/app/src/main/res/layout/activity_add_device.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/newDeviceid"
+        android:hint="Device-id"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
