--- a/app/SigFox/app/src/main/res/layout/activity_create_log.xml
+++ b/app/SigFox/app/src/main/res/layout/activity_create_log.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="Name"
         android:ems="10"
         android:id="@+id/Name"
         android:layout_below="@+id/textView2"
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:text="Password"
+        android:hint="Password"
         android:ems="10"
         android:id="@+id/password"
         android:layout_below="@+id/Name"
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/device_id"
-        android:text="Device-id"
+        android:hint="Device-id"
         android:layout_below="@+id/password"
         android:layout_alignLeft="@+id/password"
         android:layout_alignStart="@+id/password"
