--- a/app/SigFox/app/src/main/res/layout/activity_logs.xml
+++ b/app/SigFox/app/src/main/res/layout/activity_logs.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:text=""
         android:id="@+id/login"
-        android:onClick="checkLogin"
+        android:onClick="deleteInfo"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
@@ -42,7 +42,9 @@
         android:onClick="newdevice"
         android:layout_above="@+id/addAlarm"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/addAlarm"
+        android:layout_alignEnd="@+id/addAlarm" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
