--- a/app/SigFox/app/src/main/res/layout/activity_new_alarm.xml
+++ b/app/SigFox/app/src/main/res/layout/activity_new_alarm.xml
@@ -24,9 +24,9 @@ tools:context="com.example.eu.sigfox.NewAlarmActivity">
         android:layout_height="wrap_content"
         android:text="Create Alarm"
         android:id="@+id/submitTemperature"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="createAlarm"/>
+        android:onClick="createAlarm"
+        android:layout_below="@+id/temperatureThreshold"
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -41,5 +41,30 @@ tools:context="com.example.eu.sigfox.NewAlarmActivity">
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/textView2"
         android:layout_alignEnd="@+id/textView2" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Current Alarms:"
+        android:id="@+id/textView5"
+        android:layout_below="@+id/submitTemperature"
+        android:layout_alignRight="@+id/temperatureThreshold"
+        android:layout_alignEnd="@+id/temperatureThreshold"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:id="@+id/textView6"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:scrollbars = "vertical"/>
 
 </RelativeLayout>
