--- a/app/SigFox/app/src/main/res/layout/activity_main.xml
+++ b/app/SigFox/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,11 @@
         android:text="submit"
         android:id="@+id/button"
         android:onClick="submit"
-        android:layout_below="@+id/appUsername"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/userpassapp"
+        android:layout_alignLeft="@+id/signup"
+        android:layout_alignStart="@+id/signup"
+        android:layout_alignRight="@+id/signup"
+        android:layout_alignEnd="@+id/signup" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -35,31 +38,20 @@
         android:ems="10"
         android:id="@+id/appUsername"
         android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignLeft="@+id/userpassapp"
+        android:layout_alignStart="@+id/userpassapp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/log"
-        android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView"
-        android:layout_below="@+id/button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/continuee" />
-
-    TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/dev"
+        android:layout_below="@+id/continuee"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/continuee" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="match_parent"
@@ -67,8 +59,28 @@
         android:text="Continue"
         android:onClick="nextActivity"
         android:id="@+id/continuee"
-        android:layout_marginBottom="53dp"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/signup"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:hint="Password"
+        android:id="@+id/userpassapp"
+        android:layout_below="@+id/appUsername"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign up!"
+        android:id="@+id/signup"
+        android:onClick="create_log"
+        android:layout_below="@+id/button"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
