relatorio cm screenshots ja do final

--- a/app/SigFox/app/src/main/res/layout/activity_create_log.xml
+++ b/app/SigFox/app/src/main/res/layout/activity_create_log.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="You're not yet logged in! Please input your user name, password and device id"
+        android:text="You're not logged in yet! Please input your user name, password and device id"
         android:id="@+id/textView2"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
