--- a/app/SigFox/app/src/main/res/layout/activity_create_log.xml
+++ b/app/SigFox/app/src/main/res/layout/activity_create_log.xml
@@ -49,11 +49,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/device_id"
         android:hint="Device-id"
-        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/password"
-        android:layout_alignEnd="@+id/password" />
+        android:layout_alignEnd="@+id/password"
+        android:layout_below="@+id/password" />
 
     <Button
         android:layout_width="wrap_content"
@@ -62,10 +62,10 @@
         android:id="@+id/createLog"
         android:onClick="createLog"
         android:layout_below="@+id/device_id"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/device_id"
-        android:layout_alignEnd="@+id/device_id" />
+        android:layout_alignEnd="@+id/device_id"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
